--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@
 
  th {
      outline: 1px solid black;
-     background-color: rgb(207, 207, 207);
+     /* background-color: rgb(207, 207, 207); */
+     background-color: royalblue;
+     color: white;
  }
 
 
@@ -25,6 +27,68 @@
      outline: none;
  }
 
- #out td{
-    width: 200px;
- }  
+ #out td {
+     width: 200px;
+ }
+
+ button {
+     background-color: royalblue;
+     color: white;
+     padding: 10px;
+     /* margin: 50%; */
+     margin: 5px;
+     border: none;
+ }
+
+ h1,
+ h4,
+ h5,
+ h6 {
+     color: royalblue;
+     text-align: center;
+ }
+
+ nav {
+     display: flex;
+     /* margin: auto; */
+     flex-wrap: wrap;
+     justify-content: center;
+     /* align-content: center; */
+ }
+
+ .centered {
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
+     padding: 5px;
+
+ }
+div {
+    /* border: 2px rgba(0, 0, 0, 0.372) solid;  */
+}
+
+ .columized {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+ }
+
+ /* #toggle {
+    width: 15px;
+    height: 15px; 
+ } */
+
+ .bar{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 5px; 
+
+ }
+
+ .w32 {
+    width : 350px; 
+    border: 2px rgba(65, 105, 225, 0.386) solid; 
+ }
